src/test/ui/if/if-without-block.stderr
error: expected `{`, found `}`
  --> $DIR/if-without-block.rs:7:1
   |
LL |     if 5 == {
   |     -- this `if` statement has a condition, but no block
...
LL | }
   | ^ expected `{`

error: aborting due to previous error

